--- a/random test sak/test/index.html
+++ b/random test sak/test/index.html
@@ -13,14 +13,16 @@ yes
 no
 <br>
 yes
-<li style="background-color: darkorange; color:firebrick;font-family: 'Times New Roman', Times, serif;font-size: larger; " > <!--style är css kod-->>
+<li style="color:firebrick;font-family: 'Times New Roman', Times, serif;font-size: larger; " > <!--style är css kod-->>
     abc
-    <a><img src= </a>
 </li>
 <ol>
+    
     <li>
-        no
+        no<br>
+    
     </li>
 </ol>
+<img src="https://preview.redd.it/5cdouylatv831.jpg?auto=webp&s=ae3a8c92b3699308663ddbfdc64c84f94bff5d72">
 </body>
 </html>
