--- a/uppgifter/1.1.5/index.html
+++ b/uppgifter/1.1.5/index.html
@@ -7,6 +7,6 @@
 välkommen!<br>
 Detta är min andra webbsida.<br>
 <br>
-I denna övning övar jag mig att skapa nya rader.
+I denna övning övar jag mig att skapa nya rader
 </body>
 </html>
