--- a/uppgifter/HTML 2/Index.html
+++ b/uppgifter/HTML 2/Index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>recept</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Programmeringsresurser</title>
+    <meta name="description" content="recept">
+    <meta name="keywords" content="recept">
 </head>
 <body>
 <h1>Mina Recept</h1>
