--- a/uppgifter/HTML 2/tomatsoppa.html
+++ b/uppgifter/HTML 2/tomatsoppa.html
@@ -38,7 +38,7 @@
     </li>
     <li>Skala och hacka löken. Fräs den i lite matfett.</li>
     <li>Skär de färska tomaterna i små tärningar. Blanda lök, krossade tomater, färska tomater, tomatpuré, grönsaksbuljongtärningen och vatten i en rejäl kastrull. Låt koka ca 10 minuter. Smaka av med salt och peppar.</li>
-    <li>Mixa allt med stavmixer eller i en matberedare. Späd med grädde för att få soppan krämig.
+    <li>Mixa allt med stavmixer eller i en matberedare. Späd med grädde för att få soppan krämig
     </li>
     <li>Basilikacrème: Finhacka rejält med färska basilikablad och blanda med crème fraiche. Klicka i soppan strax före servering eller servera bredvid.</li>
 </ol>
