--- a/uppgifter/1HTML/index.html
+++ b/uppgifter/1HTML/index.html
@@ -46,7 +46,7 @@
     </tr>
     <tr>
       <td><a href="https://github.com/" target="_blank">Github</a></td>
-      <td>Online versionshanteringsplatform dit man kan spara sina programmeringsproject</td>
+      <td>Online versionshanteringsplatform dit man kan spara sina programmeringsproject.</td>
     </tr>
   </table>
 
