--- a/uppgifter/2HTML/Index.html
+++ b/uppgifter/2HTML/Index.html
@@ -4,7 +4,7 @@
     <title>recept</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programmeringsresurser</title>
+    <title>Programmeringsresurser.</title>
     <meta name="description" content="recept">
     <meta name="keywords" content="recept">
 </head>
