Acctual fix recept

--- a/uppgifter/2HTML/tomatsoppa.html
+++ b/uppgifter/2HTML/tomatsoppa.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Tomatsoppa">
 </head>
 <body>
-<a href="Index.html">Tillbaka</a> <br>
+<a href="index.html">Tillbaka</a> <br>
 <img src="tomatsoppa.jpg" alt="tomatsoppa" width="248" height="170">
 
 <h1>Recept för Tommatsoppa</h1>
@@ -42,6 +42,6 @@
     </li>
     <li>Basilikacrème: Finhacka rejält med färska basilikablad och blanda med crème fraiche. Klicka i soppan strax före servering eller servera bredvid.</li>
 </ol>
-<a href="Index.html">Tillbaka</a> <br>
+<a href="index.html">Tillbaka</a> <br>
 </body>
 </html>
