--- a/uppgifter/CSS 2.4/index.html
+++ b/uppgifter/CSS 2.4/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        h1,h2,h3,h4,h5,h6 {color:red}
-        h1,h2,h3,h4,h5,h6 {font-family: sans-serif;}
-        h1,h2,h3,h4,h5,h6 {font-size: x-large;}
-        h1,h2,h3,h4,h5,h6 {margin-top: 0.1px;}
-        h1,h2,h3,h4,h5,h6 {margin-bottom: 0.1px;}
-        h1,h2,h3,h4,h5,h6 {margin-right: 0.1px;}
-        h1,h2,h3,h4,h5,h6 {margin-left: 0.1px;}
-    </style>
+
+    <link rel="stylesheet" href="style.css">
+   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Övning</title>
