--- a/uppgifter/CSS 2.5/index.html
+++ b/uppgifter/CSS 2.5/index.html
@@ -1,25 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        div{
-border:1px red;
-background-color: red;
-padding-left: 50px;
-padding-bottom: 30px;
-padding-top: 20px;
-
-        }div
-    </style>
+    
+    <link rel="stylesheet" href="2.5.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS2.5</title>
 </head>
 <body>
-
-    <div> <p> <span style="color:white;">Box 1</span><p></div>
-
-        <div> <p> <span style="color:white;">Box 2</span><p></div>
-
+    <div class="Box1">Box1</div>
+    <div class="Box2">Box2</div>
+    <div class="Box3">Box3</div>
 </body>
 </html>
