--- a/uppgifter/CSS2.12/index.html
+++ b/uppgifter/CSS2.12/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="2.11.css">
+    <link rel="stylesheet" href="flagga.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tyskland</title>
+    <title>flagga</title>
 </head>
 <body>
-    
+
     <div class="parent">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
+<div class="box1"></div>
+<div class="box2"></div>
+<div class="box3"></div>
+
+    </div>
 </body>
 </html>
