--- a/uppgifter/ny.html2/index.html
+++ b/uppgifter/ny.html2/index.html
@@ -4,7 +4,6 @@
     <title>recept</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programmeringsresurser</title>
     <meta name="description" content="recept">
     <meta name="keywords" content="recept">
 </head>
@@ -13,8 +12,10 @@
 <hr>
 <ul>
     <li><a href="Plattar.html">Plättar</a></li>
-    <li><a href="tomatsoppa.html">Tomatsoppa</a></li></li>
-    <li><a href="brod.html">lätt lantbröd</a></li></li>
+
+    <li><a href="tomatsoppa.html">Tomatsoppa</a></li>
+
+    <li><a href="brod.html">lätt lantbröd</a></li>
   </ul>
   <hr>
   
