--- a/uppgifter/ny.html2/plattar.html
+++ b/uppgifter/ny.html2/plattar.html
@@ -4,12 +4,11 @@
     <title>Plattar</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plattar</title>
     <meta name="description" content="Plattar">
     <meta name="keywords" content="Plattar">
 </head>
 <body>
-    <a href="index.html">Tillbaka</a></p>
+    <a href="index.html">Tillbaka</a>
         <img src="pannkakor.jpg" alt="pannkakor" width = "310" height="220">
        
         <h1>Recept för pannkakor och plättar</h1>
