--- a/uppgifter/ny.html2/index.html
+++ b/uppgifter/ny.html2/index.html
@@ -11,7 +11,7 @@
 <h1>Mina Recept</h1>
 <hr>
 <ul>
-    <li><a href="Plattar.html">Plättar</a></li>
+    <li><a href="plattar.html">Plättar</a></li>
 
     <li><a href="tomatsoppa.html">Tomatsoppa</a></li>
 
