--- a/uppgifter/ny.html2/index.html
+++ b/uppgifter/ny.html2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>recept</title>
+    <title>recept.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="recept">
@@ -11,6 +11,7 @@
 <h1>Mina Recept</h1>
 <hr>
 <ul>
+
     <li><a href="plattar.html">Plättar</a></li>
 
     <li><a href="tomatsoppa.html">Tomatsoppa</a></li>
