--- a/uppgifter/ny.html2/plattar.html
+++ b/uppgifter/ny.html2/plattar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Plattar</title>
+    <title>plattar</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plattar">
