--- a/uppgifter/ny.html2/index.html
+++ b/uppgifter/ny.html2/index.html
@@ -12,7 +12,7 @@
 <hr>
 <ul>
 
-  
+  <li><a href="https://filipk03.github.io/uppgifter/ny.html2/plattar.html">Plättar</a></li>
 
     <li><a href="tomatsoppa.html">Tomatsoppa</a></li>
 
