--- a/uppgifter/1.4.2/index.html
+++ b/uppgifter/1.4.2/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <h1><u>HTML</u></h1>
-    <strong>Hypertext Markup Language</strong> <em>(HTML)</em> is <Del>a programming Language</Del> the standard markup<p> language for documents designed to be displayed in a <u>web browser</u>.It can be assisted by</p> 
-    <p>technologies such as <strong>Cascading Style </strong><em>(CSS)</em> Sheets and scripting languages such as</p>
-    <strong>JavaScript</strong> <em>(JS)</em>.
+
+    <p><strong>Hypertext Markup Language</strong> <em>(HTML)</em> is <Del>a programming Language</Del> the standard markup language for documents designed to be displayed in a <u>web browser</u>.It can be assisted by 
+    technologies such as <strong>Cascading Style </strong><em>(CSS)</em> Sheets and scripting languages such as
+    <strong>JavaScript</strong> <em>(JS)</em> </p>
     
     
 </body>
