--- a/uppgifter/CSS 2.3/Index.html
+++ b/uppgifter/CSS 2.3/Index.html
@@ -16,6 +16,6 @@
 
 <h3>Rubrik 2</h3>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum molestiae placeat eaque, doloribus ex odit vero ipsa laborum magnam ad accusamus nobis beatae esse necessitatibus error tenetur dignissimos. Laboriosam!</p>
+<p>Lorem ipsum dolor sit consectetur adipisicing elit. Eos harum molestiae placeat eaque, doloribus ex odit vero ipsa laborum magnam ad accusamus nobis beatae esse necessitatibus error tenetur dignissimos. Laboriosam!</p>
 </body>
 </html>
