--- a/uppgifter/2.20/index.html
+++ b/uppgifter/2.20/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
 <div class="parent">
-
 <div class="picture"></div>
+
+<h1>Cow Cow</h1>
+
+<h3>Grass Eater</h3>
+
+<hr>
+<p> Lorem ipsum dolor sit amet</p>
+<p>dolor sit amet consectetur sit amet sit amet </p>
+<p>aperiam, sint neque deserunt sunt </p>
 
 </div>
 </body>
