--- a/uppgifter/2.24/index.html
+++ b/uppgifter/2.24/index.html
@@ -14,7 +14,7 @@
     <img src="BannerLogo_AmongUs.png" alt="among_us_logo">
     </div>
     <nav class="button"><a href="index.html"><h3>Home</h3></a></nav>
-    <div class="button1"><a href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank"><h2>Purchase</h2></a></div>
+    <div class="button1"><a href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank"><h4>Purchase Now</h4></a></div>
     <div class="button2"><a href="http://www.innersloth.com/gameAmongUs.php" target="_blank"><h4>Official Website</h4></a></div>
 </div>
 
