--- a/uppgifter/2.25/index.html
+++ b/uppgifter/2.25/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="stylesheet" href="reset.css">
+
+    <link rel="stylesheet" href="2.25.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2.25</title>
 </head>
 <body>
-    
+    <div class="parent">
+    <h2>JavaScript introduktion</h2>
+
+    <p>I denna del lär du dig <strong>grunderna</strong> inom programmering med <strong>JavaScript</strong>. Jag rekommenderar att du gör övningarna i rätt ordning, dvs. från första till sista.</p>
+
+    <p><strong>JavaScript</strong> är ett mycket populärt programmeringsspråk som gör det möjligt att skapa interaktiva webbsidor, t.ex. vad som händer då man klickar på knappar, visa interaktiva kartor, 2D/3D spel samt animationer m.m..</p>
+
+    <ul><li><p>Till skillnad från HTML och CSS kan JavaScript klassas som ett programmeringsspråk.</p></li></ul>
+
+    <ul><li><p>JavaScript förkortas ofta som JS.</p></li></ul>
+
+    <ul><li><p>JavaScript kallas också för ECMAScript.</p></li></ul>
+
+    <ul><li><p>JavaScript är inte samma som programmeringsspråket Java.</p></li></ul>
+
+    <h3>Vad du redam borde veta</h3>
+
+    <p>Övningarna i denna del förutsätter att du har följande grundläggande bakgrund:</p>
+
+    <ul><li><p>En allmän förståelse för <a href="https://sv.wikipedia.org/wiki/Internet" target="_blank">Internet</a> och <a href="https://sv.wikipedia.org/wiki/World_Wide_Web" target="_blank">World Wide Web (www)</a>.</p></li></ul>
+
+    <ul><li><p>Bra kunskaper i <a href="https://sv.wikipedia.org/wiki/HTML" target="_blank">html</a> och <a href="https://sv.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS</p></a></li></ul>
+
+    <h3>Var du hittar mera JavaScript-information</h3>
+
+    <ul><li><p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference" target="_blank">JavaScript Referens</a></p></li></ul>
+
+    <ul><li><p><a href="https://www.w3schools.com/js/DEFAULT.asp" target="_blank">W3 JavaScript Tutorial</a></p></li></ul>
+</div> 
 </body>
 </html>
