--- a/uppgifter/2.26/index.html
+++ b/uppgifter/2.26/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="2.26.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2.26</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptate sit perspiciatis praesentium quibusdam facilis, quos exercitationem sed animi reprehenderit, quasi possimus esse, pariatur soluta consequatur dolores sint! Quisquam, ex.</p>
 </body>
 </html>
