--- a/uppgifter/topbar2/index.html
+++ b/uppgifter/topbar2/index.html
@@ -29,7 +29,14 @@
 </div>
 
 </div>
-<div class=""></div>
+<div class="parentMidbox">
+    
+<div class="midbox1"></div>
+</div>
+
+<div class="bottombox">
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe veritatis, pariatur natus sint facere est eligendi temporibus inventore ut eveniet dolore ipsa, aut consequatur molestias eum quas perspiciatis perferendis obcaecati?</p>
+</div>
 
 </body>
 </html>
