--- a/uppgifter/optima replica/index.html
+++ b/uppgifter/optima replica/index.html
@@ -19,19 +19,39 @@
     <img class="img2" src="optima-logo.svg" alt="optima">
 </nav>
 <nav class="topbox2">
-    <h2>Om oss<p>v</p></h2>
+<select name="dropdown">
+    <option value="dropdown2">Om oss</option>
+    <option value="dropdown3">yes</option>
+    <option value="dropdown4">yes</option>
+</select>
 </nav>
 <nav class="topbox3">
-    <h2>Ansökningsinformation<p>v</p></h2>
+    <select name="dropdown" >
+        <option value="dropdown6">Ansökningsinformation</option>
+        <option value="dropdown8">yes</option>
+        <option value="dropdown4">yes</option>
+    </select>
 </nav>
 <nav class="topbox4">
-    <h2>Våra utbildningar<p>v</p></h2>
+    <select name="dropdown">
+        <option value="dropdown2">Våra utbildningar</option>
+        <option value="dropdown3">yes</option>
+        <option value="dropdown4">yes</option>
+    </select>
 </nav>
 <nav class="topbox5">
-    <h2>Info för studerande<p>v</p></h2>
+    <select name="dropdown">
+        <option value="dropdown2">Info för studerande</option>
+        <option value="dropdown3">yes</option>
+        <option value="dropdown4">yes</option>
+    </select>
 </nav>
 <nav class="topbox6">
-    <h2>För arberslivet<p>v</p></h2>
+    <select name="dropdown">
+        <option value="dropdown2">För arbetslivet</option>
+        <option value="dropdown3">yes</option>
+        <option value="dropdown4">yes</option>
+    </select>
 </nav>
 <nav class="parentBox1">
     <nav class="box1">
@@ -49,13 +69,17 @@
     </nav>
 
     <nav class="box2">
-        <nav class="topbox7"> <h4>För arberslivet<p>v</p></h4></nav>
+        <select name="dropdown">
+            <option value="dropdown2">Service och tjänster</option>
+            <option value="dropdown3">yes</option>
+            <option value="dropdown4">yes</option>
+        </select>
     </nav>
 </nav>
 
 
 </nav>
-<img src="optima2.PNG" alt="">
+<div class="bigImage"><p class="p7">We Learn for <br>Life</p></div>
 
 
 <div class="parentfooter">
