--- a/uppgifter/egen hemsida/index.html
+++ b/uppgifter/egen hemsida/index.html
@@ -15,10 +15,10 @@
 
 <nav class="topbar2 gridcol-4">
     <nav class="nav4">
-        <img class="img3" src="logo12.png" alt="logo">
+        <img class="img3" src="logo1.jpg" alt="logo">
     </nav>
     <nav>
-        <h1 class="p5">Home</h1>
+        <h1 class="p5">Home </h1>
     </nav>
     <nav>
         <h1 class="p5">Products</h1>
@@ -53,7 +53,7 @@
         <div class="footerChild1"><p class="p2">voluptatibus explicabo dolor sit amet</p></div>
         <div class="footerChild2"><p class="p3"> illum, fuga tempore, facere adipisci eligendi in aliquam officiis reprehenderit voluptas. Libero corrupti ipsam tempora quibusdam veniam.</p></div>
     <div class="footerBottom">
-        <img class="img3" src="logo12.png" alt="logo">
+        <img class="img3" src="logo1.jpg" alt="logo">
         <p class="p8">Kontakt:</p>
         <p class="p8">Tel +358 35856699</p>
         <p class="p8">BraHemsido@gmail.com</p>
